# game-translator

./: Cargo.toml  README.md  body.txt  build.rs  installer.nsi  org.caioxcezar.settings_gt.gschema.xml
.github/workflows/: action.yml
resources/: game_translator.gresource.xml  shortcuts.ui  styles.css  window.ui
src/: main.rs  paint.rs  rect.rs  screen.rs  settings.rs  state.rs  translation.rs  utils.rs
src/area_object/: imp.rs  mod.rs
src/browser/: browser_actor.rs  browser_handle.rs  browser_message.rs  mod.rs
src/ocr_object/: imp.rs  mod.rs
src/profile_object/: imp.rs  mod.rs
src/screen_object/: imp.rs  mod.rs
src/translator_object/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
src/window_manager/sys/: mod.rs
src/window_manager/sys/linux/: mod.rs
src/window_manager/sys/windows/: mod.rs
