[package]
name = "game-translator"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_2"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_10"] }
rusty-tesseract = "1.1.10"
once_cell = "1.21.3"
anyhow = "1.0.98"
rayon = "1.7.0"
uuid = { version = "1.17.0", package = "uuid", features = ["v4", "fast-rng"] }
gdk4-win32 = { version = "0.10.0", features = ["v4_4", "win32"] }
xcap = "0.6.2"
image = "0.25.6"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
fantoccini = "0.22.0"
reqwest = "0.12.22"
zip = "4.3.0"
regex = "1.11.1"
pangocairo = "0.21.0"
pango = "0.21.0"
[build-dependencies]
glib-build-tools = "0.21.0"
gtk = { version = "0.10.0", package = "gtk4" }
